# rustAIENG

./: Cargo.toml  DEV_SETUP.md  Dockerfile.txt  FIXES_APPLIED.md  INTEGRATION.md  README.md  benchmark.sh  build.rs  config.toml  deploy.sh  dev-run.sh  dev-setup-complete.sh  dev-setup-comprehensive.sh  dev-setup-simple.sh  dev_setup.sh  docker-compose.yml  env.example  nginx.conf  quick-start.sh  test_installation.sh  verify_build.sh  verify_fixes.sh
dashboard/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/dashboard/: MetricCard.tsx  RealTimeChart.tsx  SystemStatus.tsx
dashboard/src/components/layout/: Layout.tsx
dashboard/src/contexts/: WebSocketContext.tsx
dashboard/src/lib/: utils.ts
dashboard/src/pages/: CloudStorage.tsx  Dashboard.tsx  InferenceConsole.tsx  ModelManagement.tsx  Performance.tsx  Settings.tsx
src/: main.rs
src/api/: server.rs  websocket.rs
src/core/: database.rs  enhanced_inference.rs  inference_engine.rs  model_manager.rs
src/models/: custom_model_registry.rs  mod.rs  model_ensemble.rs  multimodal_processor.rs  quantization_tools.rs  vision_models.rs
src/monitoring/: alerting.rs  custom_metrics.rs  distributed_tracing.rs  enhanced_metrics.rs  metrics.rs  mod.rs  structured_logging.rs
src/production/: config_hot_reload.rs  graceful_shutdown.rs  health_checks.rs  kubernetes.rs  migrations.rs  mod.rs
src/security/: api_keys.rs  auth.rs  jwt.rs  mod.rs  rate_limiter.rs  security_middleware.rs
src/storage/: backup_management.rs  mod.rs  model_versioning.rs
src/storage/cache/: cache_config.rs  cache_manager.rs  distributed_cache.rs  file_cache.rs  memory_cache.rs  mod.rs
src/storage/cloud_storage/: azure_blob_storage.rs  cloud_config.rs  gcs_storage.rs  mod.rs  s3_storage.rs  storage_factory.rs
